[package]
name = "chip8book"
version = "0.1.0"
authors = ["Yushi Omote <yushi.omote@sbibits.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { path = "uefi-rs" }
uefi-services = { path = "uefi-rs/uefi-services" }
uefi-exts = { path = "uefi-rs/uefi-exts" }

log = { version = "0.4", default-features = false }
rand = { version = "0.6", default-features = false }
libchip8 = { path = "../libchip8" }
